<resources>
    <string name="app_name">Marvellous</string>
    <string name="character_name">character name</string>
    <string name="character_description">character description</string>
    <string name="capitan_america">Capitan America</string>
    <string name="marvel">MARVEL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comics">Comics</string>
    <string name="series">Series</string>
    <string name="stories">Historias</string>
    <string name="events">Eventos</string>
    <string name="characters">Personajes</string>
    <string name="user">usuario</string>
    <string name="password">contraseña</string>
    <string name="name">Nombre</string>
    <string name="comments_title">Deja aquí tu comentario</string>
    <string name="comment_body_hint">Escribe aqui tu comentario</string>
    <string name="comment_send_toast">Comentario enviado!!</string>
    <string name="comments">Opiniones</string>
    <string name="characters_2p">Personajes:</string>
    <string name="creators_2p">Creadores:</string>
    <string name="available"> disponible</string>
    <string name="number_of_pages">Numero de paginas:</string>
</resources>
