<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5">


    <Button
        android:id="@+id/b_comics"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/comics"
        android:text="@string/comics"
        android:theme="@style/MainMenuButtonText"/>

    <Button
        android:id="@+id/b_series"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/series"
        android:background="@drawable/series"
        android:theme="@style/MainMenuButtonText"/>

    <Button
        android:id="@+id/b_stories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/historias"
        android:text="@string/stories"
        android:theme="@style/MainMenuButtonText" />

    <Button
        android:id="@+id/b_events"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#0000"
        android:text="@string/events"
        android:theme="@style/MainMenuButtonText" />
    <Button
        android:id="@+id/b_characters"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#0000"
        android:text="@string/characters"
        android:theme="@style/MainMenuButtonText" />
</LinearLayout>
