<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ly_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white">
        <TextView
        android:id="@+id/tv_comment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comments_title"
        android:textSize="14dp"
        android:theme="@style/TextViewTitle" />

    <EditText
        android:id="@+id/et_comment_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:theme="@style/TextViewText" />

    <EditText
        android:id="@+id/et_comment_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment_body_hint"
        android:inputType="text"
        android:theme="@style/TextViewText" />

    <Button
        android:id="@+id/b_send_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fui_button_text_send"
        android:layout_gravity="center"
        android:visibility="gone"

        />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>