<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_character_info_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_card_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="15dp"
        card_view:layout_constraintBottom_toTopOf="@+id/ly_buttons"
        card_view:layout_constraintLeft_toLeftOf="parent"
        card_view:layout_constraintRight_toRightOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/iv_character_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@android:color/holo_red_dark" />

            <TextView
                android:id="@+id/tv_character_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/iv_character_photo"
                android:layout_toEndOf="@+id/iv_character_photo"
                android:text="lñkasjdflkaj"
                android:theme="@style/TextViewTitle" />

            <TextView
                android:id="@+id/tv_character_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_character_name"
                android:layout_toEndOf="@+id/iv_character_photo"
                android:text="lbskdbh sdkfhbslkdjfbhskdfç bsdkfhblsdkfhbklsdfhblksdfhb lsdfb sdflkbhsdkfb"
                android:textColor="@android:color/black"
                android:theme="@style/TextViewText" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/ly_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_card_info">

        <Button
            android:id="@+id/b_comics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/comics"

            style="@android:style/Holo.ButtonBar"

            />


        <Button
            android:id="@+id/b_stories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stories"
            style="@android:style/Holo.ButtonBar"

            />

        <Button
            android:id="@+id/b_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/series"
            style="@android:style/Holo.ButtonBar"

            />

        <Button
            android:id="@+id/b_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/comments"
            style="@android:style/Holo.ButtonBar"

            />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>

