<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_card_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    card_view:cardCornerRadius="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_comic_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:scaleType="centerCrop" />


        <TextView
            android:id="@+id/tv_comic_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="lñkasjdflkajkjghjhgjhgjhgjjjg"
            android:theme="@style/TextViewTitle" />


        <TextView
            android:id="@+id/tv_comic_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="lñkasjdflkajkjghjhgjhgjhgjjjgfghdghdfhdfjhdfhdfjhdfghdfjhdfhdfgjhdfhdfjhdfhfdjhdfghdfjhdfhdfhdfgjh"
            android:theme="@style/bodyComment" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/characters_2p"
                android:textColor="@android:color/holo_red_dark"
                android:theme="@style/bodyComment" />

            <TextView
                android:id="@+id/tv_comic_characters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="erwgrwergwergqwerqwerqwerrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrwerwer/newrqwerqwerqwer/qwerqwer/nqwreqwer /n qwreqwerwerg"
                android:theme="@style/bodyComment" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ly_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/creators_2p"
                    android:textColor="@android:color/holo_red_dark"
                    android:theme="@style/bodyComment" />

                <TextView
                    android:id="@+id/tv_comic_creators"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="erwgrwergwergwerg"
                    android:theme="@style/bodyComment" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ly_1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_pages"
                    android:textColor="@android:color/holo_red_dark"
                    android:theme="@style/bodyComment" />

                <TextView
                    android:id="@+id/tv_comic_pages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="erw"
                    android:theme="@style/bodyComment" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_comic_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/ly_3"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="10dp"
                android:text="18$"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp" />

        </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>

